--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="last_name">Last name</string>
     <string name="commit">Commit</string>
     <string name="required_field">Required field</string>
+    <string name="title">Title</string>
 </resources>
